# mnec

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
mnec/: settings.py  settings.py.debug  urls.py  urls.py.bak  wsgi.py
nec/: admin.py  apps.py  models.py  urls.py  urls.py.bak  views.py  views.py.bak
nec/migrations/: .gitignore  0001_initial.py  0002_auto_20170827_1341.py
nec/static/css/: record.css
nec/templates/: base.html  base_material_lite.html
nec/templates/includes/: model_form.html
nec/templates/nec/: bank.html  base.html  dashboard.html  dashboard.html.bak  login.html  signup.html
nec/tests/: tests.py
nec_bank/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
nec_bank/migrations/: 0001_initial.py  0002_auto_20180202_0311.py
nec_bank/templates/nec_bank/: create_bank.html  create_money.html  edit_bank.html  (+4 more)
nec_calendar/: apps.py  tests.py  urls.py  views.py
nec_calendar/classes/: calendar.py  day.py  event.py
nec_calendar/tests/: test_calendar.py  test_calendar_day.py
nec_todo/: apps.py  forms.py  models.py  urls.py  views.py
nec_todo/migrations/: .gitignore
nec_todo/tests/: test_models.py
nec_wiki/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
nec_wiki/templatetags/: wikilink.py
project/: admin.py  forms.py  models.py  urls.py  views.py
project/templatetags/: project_tags.py
store/: .gitignore  admin.py  domeme_parser.py  models.py  naver_parser.py  scout_parser.py  tts.py  urls.py  views.py
templates/registration/: login.html
(+32 files in other folders)
