[tool.poetry]
name = "mnec"
version = "0.1.0"
description = ""
authors = ["Cho Yongchan <igam0000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.9"
django-widget-tweaks = "^1.4.8"
markdown = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
